--- a/src/assets/scss/layout.scss
+++ b/src/assets/scss/layout.scss
@@ -97,6 +97,7 @@
  * Site footer
  */
 .site-footer {
+    text-align: center;
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
