--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -10,6 +10,7 @@
 .home-header-details {
   margin-right: 50px;
   max-width: 350px;
+  font-size: 15px;
 }
 
 .home-header-details-name {
@@ -19,7 +20,6 @@
 
 .home-header-details-roles {
   padding: 10px 0;
-
 }
 
 .header-home-details-content {
