added better photo

--- a/src/_includes/home-header.html
+++ b/src/_includes/home-header.html
@@ -18,6 +18,6 @@
     </div>
   </div>
   <div class="home-header-image">
-    <img src="/assets/images/luca.png" alt="Luca DeCaprio's Portfolio" />
+    <img src="/assets/images/luca_transparent.png" alt="Luca DeCaprio's Portfolio" />
   </div>
 </header>
