fixed stretching image

--- a/src/_layouts/home.html
+++ b/src/_layouts/home.html
@@ -24,7 +24,7 @@
 
 <!-- JS -->
 <!-- inject:js -->
-<script src="/assets/javascript/index-1d8bd28c79.min.js"></script>
+<script src="/assets/javascript/index.js"></script>
 <!-- endinject -->
 
 </body>
