--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -17,7 +17,7 @@
 
   <!-- JS -->
   <!-- inject:js -->
-  <script src="/assets/javascript/index-1d8bd28c79.min.js"></script>
+  <script src="/assets/javascript/index.js"></script>
   <!-- endinject -->
 
   </body>
