--- a/src/_includes/home-header.html
+++ b/src/_includes/home-header.html
@@ -15,6 +15,9 @@
       <a href="https://www.instagram.com/lucadecaprio/">
         <i class="fa fa-instagram"></i>
       </a>
+      <a href="https://ca.linkedin.com/in/lucadecaprio">
+        <i class="fa fa-linkedin-square"></i>
+      </a>
     </div>
   </div>
   <div class="home-header-image">
