Did some QA, fixed design, added favicon  and made links open in new tab

--- a/src/_includes/home-header.html
+++ b/src/_includes/home-header.html
@@ -1,21 +1,25 @@
 <header class="home-header">
   <div class="home-header-details">
-    <div class="home-header-details-name">Luca Decaprio</div>
+    <div class="home-header-details-name">Luca DeCaprio</div>
     <div class="skinny-line"></div>
-    <div class="home-header-details-roles">Front end developer <span class="bullet">&bull;</span> Product design <span class="bullet">&bull;</span> Freelancer</div>
+    <div class="home-header-details-roles">Front-End Developer <span class="bullet">&bull;</span> Product Design <span class="bullet">&bull;</span> Freelancer</div>
     <div class="skinny-line"></div>
-    <div class="header-home-details-content">Hey! I'm Luca. I work at <a href="https://www.mopals.com">MoPals</a> in Toronto where I am a frontend developer on the product team. When I am not working I am <a href="https://www.instagram.com/lucadecaprio/">enjoying the outdoors</a>, building workswap or <a href="https://github.com/bliitzkrieg?tab=repositories">learning something new</a>.</div>
+    <div class="header-home-details-content">
+      <div class="header-home-details-block">Hey! I'm Luca. I work at <a href="https://www.mopals.com">MoPals</a> in Toronto as a Frontend Developer on the product team.</div>
+      <div class="header-home-details-block">I specialize in bringing life to design and complementing it with well-structured, tested, beautiful JavaScript. I am an AngularJS specialist and currently loving React.</div>
+      <div class="header-home-details-block">When I am not working, I am <a href="https://www.instagram.com/lucadecaprio/">enjoying the outdoors</a>, building workswap, or <a href="https://github.com/bliitzkrieg?tab=repositories">learning something new</a>.</div>
+    </div>
     <div class="home-header-details-social">
-      <a href="https://github.com/bliitzkrieg">
+      <a href="https://github.com/bliitzkrieg" target="_blank">
         <i class="fa fa-github-square"></i>
       </a>
-      <a href="https://twitter.com/lucadecaprio">
+      <a href="https://twitter.com/lucadecaprio" target="_blank">
         <i class="fa fa-twitter-square"></i>
       </a>
-      <a href="https://www.instagram.com/lucadecaprio/">
+      <a href="https://www.instagram.com/lucadecaprio/" target="_blank">
         <i class="fa fa-instagram"></i>
       </a>
-      <a href="https://ca.linkedin.com/in/lucadecaprio">
+      <a href="https://ca.linkedin.com/in/lucadecaprio" target="_blank">
         <i class="fa fa-linkedin-square"></i>
       </a>
     </div>
