--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -15,7 +15,7 @@
       <div class="footer-col footer-col-2">
         <ul class="social-media-list">
           <li>
-            <a href="https://twitter.com/{{ site.author.twitter }}">
+            <a href="https://twitter.com/{{ site.author.twitter }}" target="_blank">
                <span class="icon icon--twitter">
                 <svg viewBox="0 0 16 16">
                   <path fill="#828282" d="M15.969,3.058c-0.586,0.26-1.217,0.436-1.878,0.515c0.675-0.405,1.194-1.045,1.438-1.809
