--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -9,7 +9,7 @@
 
   <!-- CSS -->
   <!-- inject:css -->
-  <link rel="stylesheet" href="/assets/stylesheets/style.css">
+  <link rel="stylesheet" href="/assets/stylesheets/style-4790f75468.min.css">
   <!-- endinject -->
 
   <!-- Icons -->
