changed enjoying to exploring

--- a/src/_includes/home-header.html
+++ b/src/_includes/home-header.html
@@ -7,7 +7,7 @@
     <div class="header-home-details-content">
       <div class="header-home-details-block">Hey! I'm Luca. I work at <a href="https://www.mopals.com">MoPals</a> in Toronto as a Frontend Developer on the product team.</div>
       <div class="header-home-details-block">I enjoy bringing life to design and complementing it with well-structured, tested, beautiful JavaScript. I am an AngularJS specialist and currently loving React.</div>
-      <div class="header-home-details-block">When I am not working, I am <a href="https://www.instagram.com/lucadecaprio/">enjoying the outdoors</a>, building workswap, or <a href="https://github.com/bliitzkrieg?tab=repositories">learning something new</a>.</div>
+      <div class="header-home-details-block">When I am not working, I am <a href="https://www.instagram.com/lucadecaprio/">exploring the outdoors</a>, building workswap, or <a href="https://github.com/bliitzkrieg?tab=repositories">learning something new</a>.</div>
     </div>
     <div class="home-header-details-social">
       <a href="https://github.com/bliitzkrieg" target="_blank">
