--- a/src/_includes/home-header.html
+++ b/src/_includes/home-header.html
@@ -7,7 +7,7 @@
     <div class="header-home-details-content">
       <div class="header-home-details-block">Hello! I'm Luca. I work at <a href="https://www.klood.com" target="_blank">Klood</a> in Toronto as a Frontend Developer on the product team.</div>
       <div class="header-home-details-block">I enjoy bringing life to design and complementing it with well-structured, tested, beautiful JavaScript. I am an AngularJS specialist and currently loving React.</div>
-      <div class="header-home-details-block">When I am not working, I am <a href="https://www.instagram.com/lucadecaprio/" target="_blank">exploring the outdoors</a>, building <a href="http://www.parcel.io" target="_blank">Parcel</a>, or <a href="https://github.com/bliitzkrieg?tab=repositories" target="_blank">learning something new</a>.</div>
+      <div class="header-home-details-block">When I am not working, I am <a href="https://www.instagram.com/lucadecaprio/" target="_blank">exploring the outdoors</a>, <a href="https://chrome.google.com/webstore/detail/better-youtube-subscripti/kgicdngjllamjgijagdkoalhkpplipnd?hl=en-US&authuser=1" target="_blank">building cool things</a>, or <a href="https://github.com/bliitzkrieg?tab=repositories" target="_blank">learning something new</a>.</div>
     </div>
     <div class="home-header-details-social">
       <a href="https://github.com/bliitzkrieg" target="_blank">
